Fixed CSS spacing bug

--- a/src/App.scss
+++ b/src/App.scss
@@ -228,7 +228,9 @@ h4 {
 		justify-content: space-evenly;
 	}
 
-	
+	.card-height {
+		margin: 20px 0;
+	}
 }
 
 .form-submit {
